--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "strictNullChecks": false,
+    "noImplicitAny": false,
   },
   "include": [
     "src"
